# lcbo-opt

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: synthetic_fixed_hyperparameters.py  toy_example.ipynb  unknown_mle_hyperparameters.py
src/lcbo_opt/: __init__.py  base.py  benchmarks.py  experiments.py  gp.py  optimizers.py  scalers.py
tests/: test_lcbo_smoke.py  test_public_api.py
