[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lcbo-opt"
version = "0.1.0"
description = "Official implementation of Local Constrained Bayesian Optimization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jing Jingzhe" },
  { name = "Fan Zheyi" },
  { name = "Szu Hui Ng" },
  { name = "Qingpei Hu" },
]
dependencies = [
  "torch",
  "gpytorch",
  "numpy",
  "scipy",
]

[project.optional-dependencies]
rl = [
  "gymnasium[mujoco]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lcbo_opt"]
